samples/_failures_safe/1761143351_6d294e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_04d94079.c: In function ‘display_stats’:
./samples/SAFE/__tmp_04d94079.c:160:5: error: expected declaration or statement at end of input
  160 |     printf("DEBUG count: %u\n", analyzer->stats.debug_count);
      |     ^~~~~~
